- finish api implementation - add handling for ishare credentials - add extension mechanism for different auth types - add listener and cluster templates - add mustache templating for the envoy config files
