# subscriber-config-api/src/main/java/org/fiware/sidecar/rest/SidecarConfigurationApiController.java
@@ -1,19 +1,30 @@
 package org.fiware.sidecar.rest;
 
 import io.micronaut.http.HttpResponse;
+import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.Controller;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.fiware.sidecar.api.SidecarConfigurationApi;
+import org.fiware.sidecar.exception.CredentialsConfigNotFound;
+import org.fiware.sidecar.exception.DeletionException;
+import org.fiware.sidecar.exception.FileCreationException;
+import org.fiware.sidecar.exception.FolderCreationException;
 import org.fiware.sidecar.mapping.SubscriberMapper;
+import org.fiware.sidecar.model.AuthType;
+import org.fiware.sidecar.model.AuthTypeVO;
 import org.fiware.sidecar.model.SubscriberInfoVO;
 import org.fiware.sidecar.model.SubscriberRegistrationVO;
+import org.fiware.sidecar.persistence.IShareCredentialsRepository;
+import org.fiware.sidecar.persistence.Subscriber;
 import org.fiware.sidecar.persistence.SubscriberRepository;
-import org.fiware.sidecar.repository.VirtualHostRepository;
+import org.fiware.sidecar.service.EnvoyUpdateService;
+import org.fiware.sidecar.service.SubscriberWriteService;
 
-import java.io.IOException;
+import javax.transaction.Transactional;
 import java.net.URI;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
@@ -23,22 +34,59 @@ import java.util.stream.StreamSupport;
 @RequiredArgsConstructor
 public class SidecarConfigurationApiController implements SidecarConfigurationApi {
 
-	private final VirtualHostRepository virtualHostRepository;
+	private final List<SubscriberWriteService> subscriberWriteServices;
 	private final SubscriberRepository subscriberRepository;
 	private final SubscriberMapper subscriberMapper;
+	private final EnvoyUpdateService envoyUpdateService;
 
+	@Transactional
 	@Override
 	public HttpResponse<Object> createSubscriber(SubscriberRegistrationVO subscriberRegistrationVO) {
-		return HttpResponse.created(URI.create(subscriberRepository.save(subscriberMapper.subscriberRegistrationVoToSubscriber(subscriberRegistrationVO)).getId()));
+
+		if (!subscriberRegistrationVO.authType().equals(AuthTypeVO.ISHARE)) {
+			throw new UnsupportedOperationException("Currently only iShare-authentication is supported.");
+		}
+
+		if (subscriberRepository.findByDomainAndPath(subscriberRegistrationVO.getDomain(), subscriberRegistrationVO.getPath()).isPresent()) {
+			return HttpResponse.status(HttpStatus.CONFLICT);
+		}
+
+		Subscriber subscriber = subscriberRepository.save(subscriberMapper.subscriberRegistrationVoToSubscriber(subscriberRegistrationVO));
+
+		// type specific creations
+		getServiceForAuthType(subscriberMapper.authTypeVoToAuthType(subscriberRegistrationVO.authType()))
+				.createSubscriber(subscriberRegistrationVO);
+
+		// update the envoy configuration
+		envoyUpdateService.applyConfiguration();
+
+		return HttpResponse.created(URI.create(subscriber.getId().toString()));
 	}
 
+	@Transactional
 	@Override
 	public HttpResponse<Object> deleteSubscriber(UUID id) {
-		return null;
+		Optional<Subscriber> optionalSubscriber = subscriberRepository.findById(id);
+		if (optionalSubscriber.isPresent()) {
+			subscriberRepository.deleteById(id);
+			getServiceForAuthType(optionalSubscriber.get().getAuthType()).deleteSubscriber(id);
+
+			// update the envoy configuration
+			envoyUpdateService.applyConfiguration();
+
+			return HttpResponse.noContent();
+		}
+		return HttpResponse.notFound();
 	}
 
 	@Override
 	public HttpResponse<SubscriberInfoVO> getSubscriberInfo(UUID id) {
+		Optional<SubscriberInfoVO> optionalSubscriberInfoVO = subscriberRepository
+				.findById(id)
+				.map(subscriberMapper::subscriberToSubscriberInfoVo);
+		if (optionalSubscriberInfoVO.isPresent()) {
+			return HttpResponse.ok(optionalSubscriberInfoVO.get());
+		}
 		return null;
 	}
 
@@ -49,5 +97,35 @@ public class SidecarConfigurationApiController implements SidecarConfigurationAp
 						.stream(subscriberRepository.findAll().spliterator(), true)
 						.map(subscriberMapper::subscriberToSubscriberInfoVo)
 						.collect(Collectors.toList()));
+	}
+
+	@Override
+	public HttpResponse<Object> updateCredentialConfiguration(UUID id, String credential, String body) {
+		Optional<Subscriber> optionalSubscriber = subscriberRepository.findById(id);
+		if (!optionalSubscriber.isPresent()) {
+			HttpResponse.notFound(String.format("Subscriber %s does not exist.", id));
+		}
+		try {
+			getServiceForAuthType(optionalSubscriber.get().getAuthType()).updateSubscriberCredential(id, credential, body);
+		} catch (CredentialsConfigNotFound e) {
+			HttpResponse.notFound(
+					String.format("Credential %s does not exist for subscriber %s. Only %s are supported.",
+							e.getCredential(),
+							id,
+							e.getSupportedCredentialConfigs()));
+		}
+
+		// update of credentials do not demand an update of the envoy configuration, since envoy stays free of security concerns.
+
+		return HttpResponse.noContent();
+	}
+
+	private SubscriberWriteService getServiceForAuthType(AuthType authType) {
+		return subscriberWriteServices
+				.stream()
+				.filter(sws -> sws.supportedAuthType()
+						.equals(authType))
+				.findFirst()
+				.orElseThrow(() -> new UnsupportedOperationException(String.format("Auth type %s is not supported by this instance of the sidecar.", authType.getValue())));
 	}
 }
